# deepseek_zoograf_CLIENT

./: .env.example  .gitignore  LICENSE  QUICKSTART.md  README.md  install-online.ps1  install.bat  install.ps1  main.py  pyproject.toml  requirements.txt  run.bat
docs/: ARCHITECTURE.md  DEEPSEEK_API.md  REQUIREMENTS.md  SETUP.md  TROUBLESHOOTING.md  USAGE.md
src/: __init__.py
src/core/: __init__.py  client.py  config.py  context.py  session.py
src/tools/: __init__.py  filesystem.py  registry.py  search.py  shell.py
src/ui/: __init__.py  app.py  chat_view.py  input_area.py  status_bar.py  theme.css  theme.py
src/utils/: __init__.py  logger.py  markdown.py
tests/: __init__.py  test_client.py  test_context.py  test_tools.py
