[project]
name = "deepseek-zoograf-client"
version = "1.0.0"
description = "HERO UI POR — DeepSeek Agentic Terminal Client for Windows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Sitcode", email = "zoografrodoslovje@github.com"},
]
keywords = ["deepseek", "cli", "terminal", "tui", "ai", "chat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "textual>=1.0.0",
    "openai>=1.30.0",
    "rich>=13.7.0",
    "tiktoken>=0.7.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/zoografrodoslovje/deepseek_zoograf_CLIENT"
Repository = "https://github.com/zoografrodoslovje/deepseek_zoograf_CLIENT"
Issues = "https://github.com/zoografrodoslovje/deepseek_zoograf_CLIENT/issues"

[project.scripts]
ds-cli = "main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
